bug:83388 - Unnecessary space between two rows in appt popup -Reduced the vertical spacing a bit. -Fixed the attendee name wrapping issue. -Use same icon for 'tentative' and 'no response' status.
http://bugzilla.zimbra.com/show_bug.cgi?id=83388

Copied from Perforce
 Change: 506829

--- a/WebRoot/t/resources/sass/widgets/ux/_ztcalendar.scss
+++ b/WebRoot/t/resources/sass/widgets/ux/_ztcalendar.scss
@@ -51,7 +51,6 @@ div.more-events {
 }
 
 .view-appt-ptst {
-  width: 30%;
   padding-left: 1.8em;
 
   // nudged a little to the left to align the text with icons
@@ -75,7 +74,7 @@ div.more-events {
 
 .view-appt-noresponse {
   @extend .view-appt-ptst;
-  @include background(url('/img/zimbra/ImgNeedsAction.png') $invBtnIconPos);
+  @include background(url('/img/zimbra/ImgQuestionMark.png') $invBtnIconPos);
 }
 
 .view-appt-showDetails {
@@ -87,7 +86,6 @@ div.more-events {
 .view-appt-name {
   color: $base-color;
   display: block;
-  margin-bottom: 0.5em;
 }
 
 .view-appt-color-block{
